# stock-screener

./: .dockerignore  .gitignore  Dockerfile  FUNDAMENTAL.md  Procfile  README.md  SKILL.md  TECHNICAL.md  pyproject.toml
scripts/: update_stocks.py
stock_screener/: __init__.py  app.py
stock_screener/controllers/: screener_controller.py
stock_screener/services/api/: __init__.py  screener_request.py  screener_response_formatter.py  screener_service.py
stock_screener/services/common/: percentile_scorer.py  score_curver.py  series_normalizer.py
stock_screener/services/fundamental/: __init__.py  fundamental_data_normalizer.py  fundamental_score_calculator.py  fundamental_screener_client.py  fundamental_screener_service.py
stock_screener/services/integrated/: __init__.py  integrated_screener_builder.py  potential_stock_filter.py
stock_screener/services/jobs/: stock_refresh_worker.py
stock_screener/services/technical/: __init__.py  technical_indicator_calculator.py  technical_price_client.py  (+2 more)
stock_screener/utils/: screener_rules.py  stock_database.py  stock_schema.py  stock_screener_query_builder.py  ticker_normalizer.py
tests/: test_api_screener_service.py  test_fundamental_screener_client.py  test_fundamental_screener_service.py  test_integrated_screener_builder.py  test_potential_stock_filter.py  test_query_builder.py  test_response_formatter.py  test_score_calculators.py  test_screener_request.py  test_stock_database.py  test_technical_indicator_calculator.py  test_technical_price_client.py  test_technical_screener_service.py  test_ticker_normalizer.py
