[project]
name = "stock-screener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "finvizfinance>=1.3.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.1",
    "yfinance>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
